<resources>
    <string name="app_name">TransPixel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Hello Guest!</string>

    <string name="nav_item_dashboard">Dashboard</string>
    <string name="photo_button">Take Photo</string>
    <string name="load_button">Load Photo</string>

    <string name="nav_item_login">Login</string>
    <string name="hint_username">Username: </string>
    <string name="hint_password">Password: </string>
    <string name="btn_login">Sign In</string>
    <string name="btn_link_signup">Sign Up</string>

    <string name="preview_description">Image Preview</string>
    <string name="detect_button">Detect Picture</string>

    <string name="hint_email">Email:</string>
    <string name="hint_id">ID:</string>

    <string name="nav_item_profile">Profile</string>
    <string name="hint_locale">Language:</string>
    <string name="btn_logout">Log Out</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="volleyTimeout">Server Response Time Out</string>
    <string name="volleyNoConnection">No Connection to Network or Server</string>
    <string name="volleyGenericError">Generic Volley Error</string>
    <string name="volleyServerDown">Server Internal Error</string>

    <string-array name="locale_array">
        <item>English</item>
        <item>Chinese</item>
        <item>Japanese</item>
    </string-array>

    <string-array name="method_array">
        <item>OCR</item>
        <item>Object Detection</item>
    </string-array>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_result">ResultActivity</string>
    <string name="hint_result">Result:</string>
    <string name="append_button">Add to Dictionary</string>
    <string name="nav_item_dictionary">Dictionary</string>
    <string name="appendSuccess">Added to Dictionary</string>
    <string name="ocr">OCR</string>
    <string name="detect">Obj Detection</string>
    <string name="hint_method">Method:</string>
    <string name="username_error">Username_error</string>
    <string name="password_error">Password_error</string>
    <string name="login_failed">Login</string>
    <string name="email_error">Email_error</string>
    <string name="register_failed">Register_failed</string>


</resources>
